--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,6 +1,16 @@
+.gravatar-container {
+  padding:0;
+}
+
 .gravatar {
   margin-bottom: 5px;
   margin-right: 5px;
   padding: 5px;
   border: 1px solid #e5e5e5;
+  min-width: 160px;
+  min-height: 160px;
+}
+
+.user-section {
+  margin-bottom: 100px;
 }
